[package]
name = "blackwater"
version = "1.0.1"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.3", features = ["full"] }
structopt = "0.3.21"
futures = "0.3.4"
oping = "0.3.3"
stopwatch= "0.0.7"
log = "0.4.8"
log4rs = "0.10.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
